# jpybinding

./: README.md  pyproject.toml
src/jpybinding/: __init__.py
src/jpybinding.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/jpybinding/lattice/: __init__.py  lattice.py
src/jpybinding/model/: model.py
src/jpybinding/repository/: repository.py
src/jpybinding/solver/: __init__.py  solver.py
tests/: lattice_test.ipynb  test_bands.ipynb  test_kubo.ipynb  test_kubo_bastin.ipynb  test_polarization.ipynb  test_real_space_hamiltonians.ipynb
