[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "jpybinding"
version = "0.1.0"
description = "Python package for tight-binding calculations"
authors = [
    {name = "Jorge Martínez"}
]
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]